fixed issue Horizontal scrollbar appears in Users page #2684

--- a/apinf_packages/core/client/style/global.less
+++ b/apinf_packages/core/client/style/global.less
@@ -10,6 +10,9 @@ body {
   /* The fixed navbar will overlay your other content,
   unless you add padding to the top of the <body> */
   padding-top: 3em;
+
+  /* hide horizontal scroll*/
+  overflow-x: hidden;
 }
 
 html, body, h1, h2, h3, h4, h5, h6, p {
